syntax = "proto3";

import "google/protobuf/empty.proto";

package com.onehundredtwentyninth.rangiffler;

option java_multiple_files = true;
option java_package = "com.onehundredtwentyninth.rangiffler.grpc";
option java_outer_classname = "RangifflerGeoProto";

service RangifflerGeoService {
  rpc GetAllCountries(google.protobuf.Empty) returns (AllCountriesResponse) {}
  rpc GetCountry(GetCountryRequest) returns (Country) {}
  rpc GetCountryByCode(GetCountryByCodeRequest) returns (Country) {}
}

message AllCountriesResponse {
  repeated Country allCountries = 1;
}

message GetCountryRequest {
  string id = 1;
}

message GetCountryByCodeRequest {
  string code = 1;
}

message Country {
  string id = 4;
  string flag = 1;
  string code = 2;
  string name = 3;
}